# ArduinoCore-avr

./: CMakeLists.txt
cores/arduino/: CMakeLists.txt
libraries/EEPROM/: CMakeLists.txt
libraries/HID/: CMakeLists.txt
libraries/SPI/: CMakeLists.txt
libraries/SoftwareSerial/: CMakeLists.txt
libraries/Wire/: CMakeLists.txt
